<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >
    
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:paddingLeft="10dip"
        android:clickable="false"
        android:gravity="center_vertical"
        android:text="@string/login_select"
        android:textColor="#46ac5e"
        android:background="#ffffff"
        android:textSize="18sp" />
	<View 
      	android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#e1e1e1"/>
	<ListView 
	    android:id="@+id/login_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:divider="#ececec"
        android:fadingEdge="none"
        android:footerDividersEnabled="true"
        android:listSelector="#00000000"
        android:scrollbars="vertical"
        android:transcriptMode="normal" >  
	</ListView>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/btn_login_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dip"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login_cancel"
            android:textColor="#6d6d6d"
            android:background="@null"
            android:textSize="22sp" />
        <Button
            android:id="@+id/btn_login_ok"
            android:layout_width="0dp"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/login_client"
            android:textColor="#46ac5e"
            android:background="@null"
            android:textSize="22sp" />
    </LinearLayout>
</LinearLayout>
