<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/imbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/register_back"
            android:clickable="false"
            android:focusable="false"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/imbtn_back"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:textColor="#fff"
        android:textSize="16sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingLeft="@dimen/titleBar_text_padding"
        android:paddingRight="@dimen/titleBar_text_padding"
        android:singleLine="true"
        android:text="@string/login_register"
        android:textColor="#fff"
        android:textSize="19sp" />

    <Button
        android:id="@+id/imbtn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:background="@drawable/im_info"
        android:text=""
        android:textColor="#46ac5e"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_conver"
        android:layout_width="120dp"
        android:layout_height="34dp"
     	android:layout_centerInParent="true"
        android:background="@drawable/title_view_bg"
        android:gravity="center"
        android:orientation="horizontal" 
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_message"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/message_view_bg"
            android:gravity="center"
            android:text="@string/tv_meg" /> 

        <TextView
            android:id="@+id/tv_tele"
            android:layout_width="0dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/tele_view_bg"
            android:gravity="center"
            android:text="@string/tv_tel" /> 
    </LinearLayout>

</RelativeLayout>