<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/item_gray_color"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_gray_color"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/id_userinfo"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/item_press_selector"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/person" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/id_textview_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text=""
                    android:textColor="@color/item_name_color"
                    android:textSize="@dimen/itme_name_size" />

                <TextView
                    android:id="@+id/id_textView_localUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/setting_personProgramer"
                    android:textColor="@color/item_content_color"
                    android:textSize="@dimen/item_content_size" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_textview_changeclient"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:visibility="gone" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:src="@drawable/setting_change_account" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/setting_changeClient"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="15dp"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="#46ac5e"
                android:textSize="15sp" />
        </LinearLayout>

        <com.yzx.mydefineview.SettingCheckItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" />

        <RelativeLayout
            android:id="@+id/setting_720p"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/info_show_normal" >

            <TextView
                android:id="@+id/id_text_720p"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/item_press_selector"
                android:drawableLeft="@drawable/expression_down"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/setting_720p"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <CheckBox
                android:id="@+id/id_checkbox_720p"
                style="@style/defineCheckBox"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp" />
        </RelativeLayout>

        <!-- 最大码率 -->
        <RelativeLayout
            android:id="@+id/setting_max_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/info_show_normal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_max_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/max_rate"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <TextView
                android:id="@+id/tv_max_rate_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_max_rate"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <SeekBar
                android:id="@+id/seekBar_max"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tv_max_rate_number" />
        </RelativeLayout>

        <!-- 最小码率 -->
        <RelativeLayout
            android:id="@+id/setting_min_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/info_show_normal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_min_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/min_rate"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <TextView
                android:id="@+id/tv_min_rate_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/tv_min_rate"
                android:gravity="center_vertical"
                android:text=""
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />

            <SeekBar
                android:id="@+id/seekBar_min"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_toRightOf="@id/tv_min_rate_number" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/info_show_normal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_textView_about"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/item_press_selector"
                android:clickable="true"
                android:drawableLeft="@drawable/expression_down"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/setting_about"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/info_show_normal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_textView_quite"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/item_press_selector"
                android:clickable="true"
                android:drawableLeft="@drawable/setting_quite"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/setting_quite"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_tcp_trans"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@color/info_show_normal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/id_textView_tcpTrans"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@drawable/item_press_selector"
                android:clickable="true"
                android:drawableLeft="@drawable/setting_tcptrans"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:text="@string/setting_tcp_trans"
                android:textColor="@color/item_name_color"
                android:textSize="@dimen/itme_name_size" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>